@@ -1,3 +1,10 @@
+2016-01-18 Ben Shi <powerstudio1st AT 163 DOT com>
+
+	* src/SDCCicode.c
+	  Apply a modified version of patch #261 by Peter Dons Tychsen.
+	* support/regression/bug-2455.c
+	  Improve test case.
+
 2016-01-18 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCicode.c:
